# bedmapper

./: .gitignore
.github/workflows/: build-macos.yml
scripts/: stage-vision-sidecar.sh
src-native/: README.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: calibration.rs  commands.rs  geometry.rs  lib.rs  main.rs  models.rs  project.rs  state.rs  websocket.rs  workflow.rs
src-tauri/src/sidecar/: mod.rs
src-tauri/tests/: calibration_properties.proptest-regressions  calibration_properties.rs  detection_properties.rs  geometry_properties.rs  payload_properties.proptest-regressions  payload_properties.rs  project_properties.rs  workflow_properties.rs
src-ui/: package-lock.json  package.json
src-ui/src/: app.js
